# Parhelion-WMS

./: .gitignore  BRANCHING.md  CHANGELOG.md  README.md  api-architecture.md  database-schema.md  docker-compose.yml  python-analytics.md  requirments.md  service-webhooks.md
.agent/docs/: neobrutalism-components.md
.github/workflows/: README.md  ci.yml
backend/: Dockerfile  Parhelion.sln  README.md
backend/scripts/: seed-e2e-fix.sql  seed-e2e-test.sql
backend/src/Parhelion.API/: Parhelion.API.csproj  Parhelion.API.http  Program.cs  appsettings.json
backend/src/Parhelion.API/Controllers/: AnalyticsController.cs  AuthController.cs  CatalogItemsController.cs  ClientsController.cs  DriversController.cs  EmployeesController.cs  FleetLogsController.cs  InventoryStocksController.cs  InventoryTransactionsController.cs  LocationsController.cs  NetworkLinksController.cs  NotificationsController.cs  RolesController.cs  RouteBlueprintsController.cs  RouteStepsController.cs  SchemaController.cs  ShiftsController.cs  ShipmentCheckpointsController.cs  ShipmentDocumentsController.cs  ShipmentItemsController.cs  ShipmentsController.cs  TenantsController.cs  TrucksController.cs  UsersController.cs  WarehouseOperatorsController.cs  WarehouseZonesController.cs
backend/src/Parhelion.API/Data/: CrisisSeeder.cs  DataSeeder.cs
backend/src/Parhelion.API/Filters/: ServiceApiKeyAttribute.cs
backend/src/Parhelion.API/Properties/: launchSettings.json
backend/src/Parhelion.Application/: Class1.cs  Parhelion.Application.csproj
backend/src/Parhelion.Application/Auth/: IJwtService.cs  IPasswordHasher.cs  RolePermissions.cs
backend/src/Parhelion.Infrastructure/: Parhelion.Infrastructure.csproj
backend/tests/Parhelion.Tests/: EmployeeLayerIntegrationTests.cs  FullSystemE2ETest.cs  Parhelion.Tests.csproj
backups/: parhelion_dev_backup_20251216_013659.sql
docs/: api-reference.md
frontend-admin/: Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend-admin/src/: index.html  styles.scss
frontend-admin/src/app/: app.component.ts
frontend-campo/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend-campo/src/: App.tsx
frontend-campo/src/components/: AnimatedGrid.tsx
frontend-inicio/: angular.json
frontend-inicio/src/: styles.css
frontend-inicio/src/app/: app.component.ts
frontend-operaciones/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend-operaciones/src/: App.tsx  index.css
service-python/: pyproject.toml  requirements.txt
service-python/src/parhelion_py/: main.py
service-python/src/parhelion_py/api/middleware/: auth.py  internal_only.py  tenant.py
service-python/src/parhelion_py/api/routers/: analytics.py  internal.py  ml_services.py
service-python/src/parhelion_py/application/services/: __init__.py  analytics_engine.py  anomaly_detector.py  demand_forecaster.py  driver_performance.py  eta_predictor.py  loading_optimizer.py  network_analyzer.py  route_optimizer.py  shipment_clusterer.py  truck_recommender.py  utils.py
service-python/tests/unit/: test_ml_services.py
(+159 files in other folders)
