[project]
name = "parhelion-py"
version = "0.6.0-alpha"
description = "Python Analytics Service for Parhelion Logistics"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "MetaCodeX", email = "dev@macrostasis.lat" }
]
keywords = ["logistics", "analytics", "fastapi", "wms", "tms"]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    
    # Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # HTTP Client (for .NET API calls)
    "httpx>=0.28.0",
    
    # Security
    "python-jose[cryptography]>=3.3.0",
    
    # Utilities
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",  # For TestClient
    
    # Linting & Formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    
    # Type stubs
    "types-python-jose>=3.3.0",
]

ml = [
    # Data Analysis
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.0",  # Excel export
    
    # Machine Learning
    "scikit-learn>=1.5.0",
    
    # Graph Analytics (Route Optimization)
    "networkx>=3.0",
    
    # Time Series Forecasting
    # Note: prophet has complex deps, using statsmodels instead
    "statsmodels>=0.14.0",
    
    # 3D Bin Packing
    "py3dbp>=1.1.0",
    
    # Visualization
    "plotly>=5.0.0",
    
    # Community Detection
    "python-louvain>=0.16",  # community detection
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parhelion_py"]

# ===== RUFF (Linting) =====
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["parhelion_py"]

# ===== MYPY (Type Checking) =====
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg.*", "jose.*"]
ignore_missing_imports = true

# ===== PYTEST =====
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

# ===== COVERAGE =====
[tool.coverage.run]
source = ["src/parhelion_py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
